Changelog for Zodiac

Version 1.1 Changes:
- Star colors can now be customized, the color is indicated by a smaller circle in the middle of the system
- Three more mirror-modes (slash, backslash, center) which can be combined with the previous mirror modes allowing you
  to place up to 8 systems symmetrically with a single click; systems that end up outside of the galaxy will not be
  placed (this can happen because the galaxy has a rectangular shape but not a quadratic one)
- Established a small minimum distance to other systems when placing new ones in order to prevent accidentally placing
  duplicates (almost) on top of each other, especially when mirroring placements
- 'Large / Cluster' Galaxies are now separated into Large and Cluster. Cluster is the same size as large but allows for
  71 star systems instead of 54
- Fixed current system placement type selection be overwritten when loading a galaxy.
- UI-Changes: Introduced Dark Mode, shortened some range indicator descriptions, adjusted layout

Version 1.1 Backwards Compatibility:
- Previous Large/Cluster Galaxies were actually large galaxies, they are now converted to cluster galaxies when loaded.
- Previous saved stars are treated as 'Random' color (which they were already before) when loaded.