@@ -9,8 +9,9 @@ Version 1.1 Changes:
   duplicates (almost) on top of each other, especially when mirroring placements
 - 'Large / Cluster' Galaxies are now separated into Large and Cluster. Cluster is the same size as large but allows for
   71 star systems instead of 54
-- Fixed current system placement type selection be overwritten when loading a galaxy.
+- Fixed current system placement type selection be overwritten when loading a galaxy
 - UI-Changes: Introduced Dark Mode, shortened some range indicator descriptions, adjusted layout
+- Fixed drawing-order issue: crosshair (and grid) do not draw wormhole lines and selection markers anymore
 
 Version 1.1 Backwards Compatibility:
 - Previous Large/Cluster Galaxies were actually large galaxies, they are now converted to cluster galaxies when loaded.
